# application/model/UserLoginModel.go
@@ -1,0 +1,6 @@
+package model
+
+type UserLoginModel struct {
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,min=8"`
+}
